# cartographer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  main.css  output.css  package.json  w.html
.github/workflows/: pages.yml
cartographer_bot/: Cargo.toml  package.json  schema.sql  wrangler.toml
cartographer_bot/assets/eu4/anbennar/: capitals.txt
cartographer_bot/assets/eu5/vanilla/: capitals.txt  tags.txt
cartographer_bot/assets/vanilla/: capitals.txt
cartographer_bot/src/: assets.rs  db_types.rs  lib.rs  main.rs  reservations.rs
cartographer_web/: Cargo.toml  index.html  main.css  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
cartographer_web/history/: index.html
cartographer_web/page/: App.vue  main.ts  style.css  types.ts
cartographer_web/page/components/: EU4PlayerEditor.vue  FileUploadPage.vue
cartographer_web/resources/eu4/anbennar/: definition.csv  flagfiles.txt  tags.txt  wasteland.txt  water.txt
cartographer_web/resources/eu4/vanilla/: tags.txt
cartographer_web/resources/eu5/vanilla/: flags.txt  locations.txt  unownable.txt  water.txt
cartographer_web/resources/stellaris/vanilla/: colors.csv  flag_parts.txt
cartographer_web/resources/vanilla/: wasteland.txt
cartographer_web/src/: country_history.rs  lib.rs  map_history.rs  save_parser.rs  stats_image.rs  webgl.rs
cartographer_web/src/eu4/: country_history.rs  map_history.rs  map_parsers.rs  mod.rs  stats_image.rs  webgl.rs
cartographer_web/src/stellaris/: asset_loaders.rs  mod.rs  stats_image.rs
eu4_map_core/: Cargo.toml
eu4_map_core/src/: eu4_map.rs  lib.rs
eu4_parser_core/: Cargo.toml
eu4_parser_core/src/: eu4_date.rs  lib.rs  raw_parser.rs  save_parser.rs
history/: index.html
pdx_parser_core/: Cargo.toml
pdx_parser_core/src/: bin_deserialize.rs  bin_lexer.rs  common_deserialize.rs  err_context.rs  eu4_date.rs  eu4_save_parser.rs  eu5_date.rs  eu5_gamestate.rs  eu5_meta.rs  helpers.rs  lib.rs  modern_header.rs  raw_parser.rs  stellaris_date.rs  stellaris_save_parser.rs  strings_resolver.rs  text_deserialize.rs  text_lexer.rs
pdx_parser_core/src/eu5/: countries.rs  date.rs  diplomacy_manager.rs  gamestate.rs  metadata.rs  mod.rs  subunit_manager.rs  unit_manager.rs  war_manager.rs
pdx_parser_macros/: Cargo.toml
pdx_parser_macros/src/: bin_deserialize.rs  common.rs  lib.rs  text_deserialize.rs
resources/vanilla/: flagfiles.txt  wasteland.txt  water.txt
src/: _main.rs  bad_parser.rs  country_history.rs  eu4_date.rs  eu4_map.rs  lib.rs  map_history.rs  map_parsers.rs  new_parser.rs  raw_parser.rs  save_parser.rs  stats_image.rs  webgl.rs
stats_core/: Cargo.toml
stats_core/src/: fetcher.rs  lib.rs  utils.rs
stats_core/src/eu4/: assets.rs  eu4_map.rs  mod.rs  stats_image.rs
stats_core/src/eu5/: assets.rs  eu5_map.rs  mod.rs  stats_image.rs
stats_core/src/stellaris/: assets.rs  flags.rs  mod.rs  stats_image.rs  stellaris_map.rs
stellaris_map_core/: Cargo.toml
stellaris_map_core/src/: lib.rs  stellaris_map.rs
tools/: Cargo.toml
tools/src/: history.rs  main.rs  map.rs  utils.rs
tools/src/bin_tokens/: mod.rs
tools/src/eu4/: history.rs  map.rs  mod.rs
tools/src/eu5/: map.rs  mod.rs
tools/src/stellaris/: flags.rs  mod.rs
tools/src/view/: deser_helpers.rs  mod.rs  query.rs
