[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ab_glyph = "0.2.26"
anyhow = "1.0.83"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
image = "0.25.1"
imageproc = "0.24.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
base64 = "0.22.1"
reqwest = "0.12.4"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Location',
    'Response',
    'ReadableStream',
    'ReadableStreamDefaultReader',
]
