[package]
name = "cartographer_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serenity = { version = "0.12.2", default-features = false, features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "rustls_backend",
] }
chrono = "0.4.38"
nom = "7.1.3"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres"] }
lazy_static = "1.5.0"
image = "0.25.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
