[package]
name = "pdx_parser_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
num-derive = "0.4.2"
num-traits = "0.2.19"
ouroboros = "0.18.5"
pdx_parser_macros = { path = "../pdx_parser_macros" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
zip = { version = "2.0.0", default-features = false, features = ["deflate"] }
