[package]
name = "stats_core"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.26"
anyhow = "1.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
futures = "0.3.30"
image = "0.25.1"
imageproc = "0.24.0"
pdx_parser_core = { path = "../pdx_parser_core" }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "2.0.0", default-features = false, features = ["deflate"] }
