[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
image = "0.25.1"
inquire = "0.9.1"
decancer = "3.2.3"
pdx_parser_core = { path = "../pdx_parser_core" }
clap = { version = "4.5.41", features = ["derive"] }
image_dds = "0.7.2"
ddsfile = "0.5.2"
zip = { version = "2.0.0", default-features = false, features = ["deflate"] }
